# efsp-patch

./: .gitmodules  CMakeLists.txt  README.md  patch.sh
patches/: 0001-gcc.patch  0002-q_math.patch
